[project]
name = "travelplanner"
version = "0.1.0"
description = ""
authors = [
    {name = "Denys Dontsu",email = "dendontsi01@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite (>=0.22.1,<0.23.0)",
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "greenlet (>=3.5.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
